                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 08-10-2005 added: Playlists to My Music Library, also directly accessible via XBMC.ActivateWindow(MyMusicLibrary,Playlists)
 - 08-10-2005 fixed: some navigation problems with My Music Library sometimes returning the full album listing for recent and top100 albums
 - 08-10-2005 fixed: the "All" items are removed from the object count in My Music Library
 - 08-10-2005 fixed: blank and missing title, artist, album, and genre tags are set to "unknown"
 - 06-10-2005 fixed: when pausing playback of video wth passthrough in dvdplayer, audio would keep playing
 - 06-10-2005 added: XBMC.PlayerControl(Record) skin command. Toggles recording state. Player.IsRecording, Player.CanRecord are visibility states that tell if it is possible
 - 06-10-2005 fixed: dvdplayer would become unresponsive when displaying some stillimages.
 - 04-10-2005 changed: default interlaced handling is now none.. ie it doesn't try to do anything. changed due to the many times it starts to deinterlace when not needed.
 - 04-10-2005 fixed: clockspeed used for DreamX 1480 was somewhat of. Correct value is 1481.20000Mhz as per FriendTech info. (updated with forgotten file for mplayer)
 - 02-10-2005 fixed: my music keeps its settings.  (buttons need to reference ID 5, not 501.)
 - 02-10-2005 added: Video items found in locked bookmarks are hidden from My Videos database views (Title, Genre, Actor, Year) until the bookmark is unlocked from My Videos Files view or by Master User Mode
 - 30-09-2005 added: WA51-presets(265).zip, now default Presetpack in Milkdrop. Contains presets 20fps > faster (tested in PAL720x576)